# ifopt

./: .gitignore
ifopt/: CMakeLists.txt
ifopt/cmake/: ifopt-config.cmake
ifopt_ipopt/: CMakeLists.txt
ifopt_ipopt/cmake/: ifopt_ipopt-config.cmake
ifopt_snopt/cmake/: FindSNOPT.cmake
ifopt_snopt/include/ifopt/: snopt_adapter.h
ifopt_snopt/src/: snopt_adapter.cc  snopt_solver.cc
